# compilador

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bicha.s  cmake_install.cmake  codegen.c  compilador.dio  compiler  compilerteste  ex1.s  grammar.ebnf  lexer.c  lexer.h  main.c  parser.c  program  program_bicha  saida  saida.s  saida.se  teste.s  testeCodigo.qz  testeCodigo.txt
ex/: ex3.txt
include/: arena.h  codegen.h  lexer.h  parser.h  symbol.h
src/: arena.c  codegen.c  lexer.c  main.c  parser.c  symbol.c
